# GoodNightPC

./: README.md
good-night-pc/: .gitignore  README.md  dump_output.txt  dump_project.py  dump_structure.py  package-lock.json  package.json
good-night-pc-qt/good-night-pc/: CMakeLists.txt  Main.qml  README.md  dump_output.txt  dump_project.py  main.cpp
good-night-pc-qt/good-night-pc/android/: AndroidManifest.xml
good-night-pc-qt/good-night-pc/assets/www/: index.html  styles.css
good-night-pc-qt/good-night-pc/backend/: backend.cpp  backend.h
good-night-pc-qt/good-night-pc/frontend/: frontend.h  frontend_http_server.h
good-night-pc/src/: index.html  main.js  styles.css
good-night-pc/src-tauri/: Cargo.toml  tauri.conf.json
good-night-pc/src-tauri/src/: lib.rs  main.rs
